--- a/templates/main.html
+++ b/templates/main.html
@@ -3,15 +3,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
-            rel="stylesheet"
-            type="text/css"
-            media="screen"
-            href="{% static 'styles/main.css' %}"
+            rel="shortcut icon"
+            href="assets/favicon.ico"
+            type="image/x-icon"
         />
-        <title>Social App</title>
+        <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+        <title>StudyBuddy - Find study partners around the world!</title>
     </head>
+
     <body>
         {% include 'navbar.html' %} {% if messages %}
         <ul class="messages">
@@ -19,10 +21,7 @@
             <li>{{ message }}</li>
             {% endfor %}
         </ul>
-        {% endif %}
-
-        <!-- <img src="{% static 'images/HomePage.png' %}" alt="" /> -->
-
-        {% block content %} {% endblock %}
+        {% endif %} {% block content %} {% endblock %}
+        <script src="{% static 'js/script.js' %}"></script>
     </body>
 </html>
