Code cleanup and update user page

--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -27,4 +27,4 @@
     <p>Already signed up?</p>
     <a href="{% url 'login' %}">Login</a>
 </div>
-{% endif %} {% endblock %}
+{% endif %} {% endblock content %}
