--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %} {% block content %}
+
 <main class="layout layout--3">
     <div class="container">
         <!-- Topics Start -->
@@ -67,4 +68,5 @@
         <!-- Activities End -->
     </div>
 </main>
-{% endblock %}
+
+{% endblock content %}
