--- a/templates/main.html
+++ b/templates/main.html
@@ -21,7 +21,7 @@
             <li>{{ message }}</li>
             {% endfor %}
         </ul>
-        {% endif %} {% block content %} {% endblock %}
+        {% endif %} {% block content %} {% endblock content %}
         <script src="{% static 'js/script.js' %}"></script>
     </body>
 </html>
