--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,6 @@
         </form>
         <nav class="header__menu">
             <!-- Logged In -->
-
             {% if request.user.is_authenticated %}
             <div class="header__user">
                 <a href="profile.html">
@@ -65,7 +64,7 @@
             {% endif %}
 
             <div class="dropdown-menu">
-                <a href="settings.html" class="dropdown-link"
+                <a href="{% url 'update-user' %}" class="dropdown-link"
                     ><svg
                         version="1.1"
                         xmlns="http://www.w3.org/2000/svg"
