--- a/templates/main.html
+++ b/templates/main.html
@@ -7,11 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="shortcut icon"
-            href="assets/favicon.ico"
+            href="{% static 'images/logo.svg' %}"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-        <title>StudyBuddy - Find study partners around the world!</title>
+        <title>
+            Social App - Socialize with other people about topics you want to
+            talk about.
+        </title>
     </head>
 
     <body>
