User model implemented, file cleanup, database reset, and user profile setup

--- a/base/templates/base/login_register.html
+++ b/base/templates/base/login_register.html
@@ -10,17 +10,19 @@
                 </div>
             </div>
             <div class="layout__body">
-                <h2 class="auth__tagline">Find your study partner</h2>
+                <h2 class="auth__tagline">
+                    Find people who want to learn like you
+                </h2>
 
                 <form class="form" action="" method="POST">
                     {% csrf_token %}
                     <div class="form__group form__group">
-                        <label for="room_name">Username</label>
+                        <label for="room_name">Email</label>
                         <input
                             id="username"
-                            name="username"
+                            name="email"
                             type="text"
-                            placeholder="e.g. MarkyBoii"
+                            placeholder="e.g. example@email.com"
                         />
                     </div>
                     <div class="form__group">
