--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -83,9 +83,7 @@
                             class="room__author"
                         >
                             <div class="avatar avatar--small">
-                                <img
-                                    src="https://randomuser.me/api/portraits/men/37.jpg"
-                                />
+                                <img src="{{room.host.avatar.url}}" />
                             </div>
                             <span>@{{room.host.username}}</span>
                         </a>
@@ -111,7 +109,7 @@
                                     >
                                         <div class="avatar avatar--small">
                                             <img
-                                                src="https://randomuser.me/api/portraits/men/37.jpg"
+                                                src="{{message.user.avatar.url}}"
                                             />
                                         </div>
                                         <span>@{{message.user.username}}</span>
@@ -166,9 +164,7 @@
                 {% for user in participants %}
                 <a href="{% url 'user-profile' user.id %}" class="participant">
                     <div class="avatar avatar--medium">
-                        <img
-                            src="https://randomuser.me/api/portraits/men/37.jpg"
-                        />
+                        <img src="{{user.avatar.url}}" />
                     </div>
                     <p>
                         {{user.username}}
