Retain unique submitted username upon registering, add host as participant when creating new rooms

--- a/base/templates/base/activity_component.html
+++ b/base/templates/base/activity_component.html
@@ -39,11 +39,14 @@
         </div>
         <div class="activities__boxContent">
             <p>
-                replied to post “<a href="{% url 'room' message.room.id %}"
+                replied to post <br />“<a
+                    href="{% url 'room' message.room.id %}"
                     >{{message.room}}</a
                 >”
             </p>
-            <div class="activities__boxRoomContent">{{message.body}}</div>
+            <div class="activities__boxRoomContent">
+                {{message.body|truncatewords:10}}
+            </div>
         </div>
     </div>
     {% endfor %}
