--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -163,9 +163,15 @@
             <div class="participants__list scroll">
                 {% for user in participants %}
                 <a href="{% url 'user-profile' user.id %}" class="participant">
+                    {% if user.is_authenticated %}
+                    <div class="avatar avatar--medium active">
+                        <img src="{{user.avatar.url}}" />
+                    </div>
+                    {% else %}
                     <div class="avatar avatar--medium">
                         <img src="{{user.avatar.url}}" />
                     </div>
+                    {% endif %}
                     <p>
                         {{user.username}}
                         <span>@{{user.username}}</span>
@@ -177,5 +183,5 @@
         <!--  End -->
     </div>
 </main>
-<script src="script.js"></script>
+
 {% endblock content %}
