--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -240,7 +240,7 @@ a {
 }
 
 .dropdown-menu a:hover {
-    background-color: var(--color-dark-medium);
+    background-color: var(--color-dark);
 }
 
 .dropdown-menu > a:not(:last-child) {
@@ -463,7 +463,7 @@ a {
 .layout__boxTitle svg {
     width: 1.6rem;
     height: 1.6rem;
-    fill: var(--color-main);
+    fill: var(--color-light);
 }
 
 .layout__body {
