Room date added, view all topics button, minor design changes

--- a/base/templates/base/feed_component.html
+++ b/base/templates/base/feed_component.html
@@ -18,7 +18,7 @@
             <span>@{{room.host.username}}</span>
         </a>
         <div class="roomListRoom__actions">
-            <span>{{room.created|timesince}} ago</span>
+            <span>{{room.created|date:'m/d/y'}} </span>
         </div>
     </div>
     <div class="roomListRoom__content">
