--- a/base/templates/base/topic_component.html
+++ b/base/templates/base/topic_component.html
@@ -4,8 +4,8 @@
     </div>
     <ul class="topics__list">
         <li>
-            <a href="{% url 'home' %}" class="active"
-                >All <span>{{topics.count}}</span></a
+            <a href="{% url 'topics' %}" class="active"
+                >View All <span>{{topics.count}}</span></a
             >
         </li>
         {% for topic in topics %}
