--- a/templates/main.html
+++ b/templates/main.html
@@ -11,10 +11,7 @@
             type="image/x-icon"
         />
         <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-        <title>
-            Social App - Socialize with other people about topics you want to
-            talk about.
-        </title>
+        <title>Discode</title>
     </head>
 
     <body>
