--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -166,8 +166,8 @@
                                             </svg>
                                         </div>
                                     </a>
+                                    {% endif %}
                                 </div>
-                                {% endif %}
                             </div>
                             <div class="thread__details">{{message.body}}</div>
                             <!-- <span>(Edited)</span> -->
@@ -191,7 +191,7 @@
         <!--   Start -->
         <div class="participants">
             <h3 class="participants__top">
-                Participants <span>{{participants.count}}</span>
+                Participants <span>({{participants.count}})</span>
             </h3>
             <div class="participants__list scroll">
                 {% for user in participants %}
