--- a/base/templates/base/delete.html
+++ b/base/templates/base/delete.html
@@ -35,6 +35,12 @@
                             type="submit"
                             value="Confirm"
                         />
+                        <input
+                            class="btn btn--main"
+                            type="button"
+                            value="Cancel"
+                            onclick="location.href = '{{request.META.HTTP_REFERER}}';"
+                        />
                     </div>
                 </form>
             </div>
