--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -274,7 +274,7 @@ a {
 ================================*/
 
 .header {
-    padding: 1.5rem;
+    padding: 1rem;
     background-color: var(--color-dark);
 }
 
@@ -291,8 +291,8 @@ a {
 }
 
 .header__logo > img {
-    height: 3.2rem;
-    width: 3.2rem;
+    height: 4rem;
+    width: 4rem;
 }
 
 .header__logo > h1 {
@@ -458,13 +458,13 @@ a {
 .layout__boxTitle h3 {
     text-transform: uppercase;
     font-weight: 500;
-    color: var(--color-light);
+    color: var(--color-dark);
 }
 
 .layout__boxTitle svg {
     width: 1.6rem;
     height: 1.6rem;
-    fill: var(--color-light);
+    fill: var(--color-dark);
 }
 
 .layout__body {
@@ -610,6 +610,12 @@ a {
     padding-bottom: 1rem;
     text-decoration: none;
     border-bottom: 1px solid var(--color-dark-medium);
+}
+
+.topics-page .topics__list li:only-child a {
+    margin: 2rem 0;
+    padding-bottom: 1rem;
+    text-decoration: none;
 }
 
 .topics-page .header__search {
